--- a/tooplate_style_dark.css
+++ b/tooplate_style_dark.css
@@ -35,14 +35,15 @@ h1 { font-size: 36px; margin: 0 0 30px; padding: 5px 0 }
 
 
 h2, h4, h6 { color: #bbbbFF; font-weight: normal; }
-h3, h5, h7 { color: #FFFFFF; font-weight: 700; text-shadow: 1px 1px 1px #000000}
+h3, h5, h7, h9 { color: #FFFFFF; font-weight: 700; text-shadow: 1px 1px 1px #000000}
 h2 { font-size: 24px; margin: 0 0 25px; padding: 5px 0 }
 h3 { font-size: 22px; margin: 0 0 20px; padding-right: 10px;}
 h4 { font-size: 18px; margin: 0 0 15px; padding: 0; }
 h5 { font-size: 16px; margin: 0 0 5px; padding-right: 10px; font-weight: 700 }
 h6 {color: #bbbbff; font-size: 14px; margin: 0 0 5px; padding: 0; font-weight: 700 }
-h7 { font-size: 14px; margin: 0 0 5px; padding: 2px 10px 2px 10px; font-weight: 500;  background-color: #111131ff}
-h8 { font-size: 30px; margin: 0 0 0px; padding: 3px 3px 0px 3px;  background-color: #111131ff}
+h7 { font-size: 14px; margin: 0 0 5px; padding: 2px 10px 2px 10px; font-weight: 500;  background-color: #7777cc}
+h8 { font-size: 30px; margin: 0 0 0px; padding: 3px 3px 0px 3px;  background-color: #111231}
+h9 { font-size: 14px; margin: 0 0 5px; padding: 2px 10px 2px 10px; font-weight: 500;  background-color: #111231}
 
 .cleaner { clear: both }
 .h10 { height: 10px }
@@ -79,15 +80,15 @@ h8 { font-size: 30px; margin: 0 0 0px; padding: 3px 3px 0px 3px;  background-col
 	float: right;
 }
 
-#site_title { display: block; text-align: right; margin: 80px 0 40px; width: 221px; height: 40px; padding: 10px 20px; background-color: #111131ff;  repeat  }
+#site_title { display: block; text-align: right; margin: 80px 0 40px; width: 221px; height: 40px; padding: 10px 20px; background-color: #111231ff;  repeat  }
 #site_title a { font-size: 24px; font-family: Georgia, "Times New Roman", Times, serif; font-weight: bold; color: #ffffff}
 #site_title a span { display: block; margin-top: 5px; font-size: 14px; font-weight: 400; font-family: Tahoma, Geneva, sans-serif }
 
 #tooplate_menu { width: 261px; margin-bottom: 40px; }
 #tooplate_menu ul { margin: 0; padding: 0; list-style: none }
 #tooplate_menu ul li { margin: 0; padding: 0; }
-#tooplate_menu ul li a { clear: both; display: block; float: right; position: relative;  margin-bottom: 10px; letter-spacing: 3px; font-size: 16px; font-weight: 500; color: #FFFFFF; text-shadow: 1px 1px 1px #4747ba; padding: 0 10px 0 30px; height: 39px; line-height: 39px; left no-repeat; background-color: #111131ff; font-weight: bold}
-#tooplate_menu ul li a span { position: absolute; width: 3px; height: 39px; top: 0; right: 0px; ; background-color: #111131ff }
+#tooplate_menu ul li a { clear: both; display: block; float: right; position: relative;  margin-bottom: 10px; letter-spacing: 3px; font-size: 16px; font-weight: 500; color: #FFFFFF; text-shadow: 1px 1px 1px #4747ba; padding: 0 10px 0 30px; height: 39px; line-height: 39px; left no-repeat; background-color: #111231ff; font-weight: bold}
+#tooplate_menu ul li a span { position: absolute; width: 3px; height: 39px; top: 0; right: 0px; ; background-color: #111231ff }
 
 #tooplate_menu ul li a:hover { text-decoration: none; color: #bbbbff; text-shadow: 1px 1px 1px #000 }
 
